# lab06_hw

./: CI.yml  CMakeLists.txt  CPackConfig.cmake  LICENSE  README.md
.github/workflows/: CI.yml
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/: example1.cpp
